t+sga:[[dogoa]] ([[WT:EDIT|Assisted]]) <choose#28318773>

--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -69,6 +69,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Ilocano: {{t|ilo|pili}}
 * Indonesian: {{t+|id|memilih}}, {{t+|id|pilih}}
 * Irish: {{t|ga|roghnaigh}}
+*: Old Irish: {{t|sga|do·goa}}
 * Italian: {{t+|it|scegliere}}, {{t+|it|selezionare}}
 * Japanese: {{t|ja|選ぶ|tr=えらぶ, erabu}}
 * Jèrriais: {{t|roa-jer|chouaîsi}}
