--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -64,6 +64,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 #*: Nothing a day and '''find''' yourself.
 
 ====Synonyms====
+* [[look for]]
 * See also [[Wikisaurus:deem]]
 
 ====Antonyms====
