--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -80,13 +80,13 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Abkhaz: {{t|ab|ацҳа|sc=Cyrl}}
 * Adyghe: {{t|ady|лъэмыдж}}
 * Afrikaans: {{t|af|brug}}
-* Akan: {{t-needed|ak}}
+* Akan: {{t|ak|twene}}
 * Albanian: {{t|sq|urë|f}}
 * Amharic: {{t|am|ድልድይ|sc=Ethi}}
 * Arabic: {{t|ar|جسر|m|tr=jisr|sc=Arab}}
 *: Egyptian Arabic: {{t|arz|كوبري|m|tr=kobri|sc=Arab}}
 *: Moroccan Arabic: {{t|ary|قنطرة|f|tr=qənṭra}}
-* Aragonese: {{t-needed|an}}
+* Aragonese: {{t|an|puent|m}}
 * Aramaic: {{t|arc|גֶּשֶׁר|m|tr=gešer}}
 *: Classical Syriac: {{t|syc|ܓܫܪܐ|sc=Syrc}}
 * Armenian: {{t+|hy|կամուրջ}}
@@ -135,7 +135,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Indonesian: {{t+|id|jembatan}}
 *: Sundanese: {{t|id|cukang}}
 * Interlingua: {{t|ia|ponte}}
-* Interlingue: {{t-needed|ie}}
+* Interlingue: {{t|ie|ponte}}
 * Irish: {{t+|ga|droichead|m}}
 * Istriot: {{t|ist|ponto|m}}
 * Italian: {{t+|it|ponte|m}}
@@ -158,7 +158,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Latvian: {{t+|lv|tilts|m}}
 * Lingala: {{t|ln|gwagwa}}, {{t|ln|gbagba}}
 * Lithuanian: {{t+|lt|tiltas|m}}
-* Luganda: {{t-needed|lg}}
+* Luganda: {{t|lg|olutindo}}
 * Lun Bawang: {{t|lnd|afir}}
 * Luxembourgish: {{t+|lb|Bréck|f}}
 * Macedonian: {{t|mk|мост|m|tr=most|sc=Cyrl}}
@@ -184,7 +184,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 *: Cyrillic: {{t|cu|мостъ|m|sc=Cyrs}}
 * Old East Slavic: {{t|orv|мостъ|m}}
 * Old English: {{t|ang|brycg|f}}
-* Oriya: {{t-needed|or}}
+* Oriya: {{t|or|ପୋଲ|tr=pōla|sc=Orya}}
 * Ossetian: {{t|os|хид|tr=xid|sc=Cyrl}}
 * Pashto: {{t+|ps|پل|tr=pul|sc=ps-Arab}}
 * Persian: {{t+|fa|پل|tr=pol}}
@@ -195,7 +195,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Romanian: {{t+|ro|pod|n}}, {{t+|ro|punte|f}} {{qualifier|small}}
 * Romansch: {{t|rm|punt|m}}
 * Russian: {{t+|ru|мост|m}}
-* Samoan: {{t-needed|sm}}
+* Samoan: {{t|sm|faiā}}, {{t|sm|alaniu}}
 * Sanskrit: {{t|sa|सेतु|tr=setu|sc=Deva}}
 * Sardinian: {{t|sc|ponte}}, {{t|sc|ponti}}
 * Scottish Gaelic: {{t|gd|drochaid|f}}
@@ -223,7 +223,7 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 * Telugu: {{t+|te|వంతెన|tr=vantena|sc=Telu}}, {{t+|te|వారధి|tr=vāradhi|sc=Telu}}, {{t+|te|సేతువు|tr=sētuvu|sc=Telu}}
 * Thai: {{t+|th|สะพาน|tr=sàpaan|sc=Thai}}
 * Tigrinya: {{t|ti|ድልድል|sc=Ethi}}
-* Tongan: {{t-needed|to}}
+* Tongan: {{t|to|hale kavakava}}
 * Tswana: {{t|tn|borogo}}
 * Turkish: {{t+|tr|köprü}}
 * Turkmen: {{t|tk|köpri}}
