--- a/en/慎/慎.15713.wikitext
+++ b/en/慎/慎.15713.wikitext
@@ -42,7 +42,10 @@ Note the different forms, corresponds to different forms of [[真]].
 ===Kanji===
 {{ja-kanji|grade=c|rs=心10}}
 
-# {{defn|lang=ja|sort=心10}}
+# [[humility]]
+# [[be]] [[careful]]
+# [[discrete]]
+# [[prudent]]
 
 ====Readings====
 * {{ja-readings|on=[[しん]] (shin)|kun=[[つつしむ]] (tsutsushimu), [[つつしみ]] (tsutsushimi)}}
