--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -477,6 +477,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Dutch: {{t+|nl|schouwspel|n}}
 * Finnish: {{t+|fi|näytelmä}}
 * Irish: {{t|ga|dráma|m}}
+* Latvian: {{t|lv|luga}}
 * Macedonian: {{t|mk|драма|f|tr=dráma}}, {{t|mk|пиеса|f|tr=piésa}}
 * Norwegian Bokmål: {{t|nb|skuespill|n}}
 * Polish: {{t+|pl|sztuka}}
