t+lv:[[rotaļa]] ([[WT:EDIT|Assisted]]) <play#28559948>

--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -445,7 +445,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Latgalian: {{t|ltg|kaita|f}}
 {{trans-mid}}
 * Latin: {{t|la|ludus|m}}
-* Latvian: {{t|lv|spēle|f}}
+* Latvian: {{t|lv|spēle|f}}, {{t|lv|rotaļa|f}}
 * Macedonian: {{t|mk|игра|f|tr=ígra}}
 * Malayalam: {{t+|ml|കളി|tr=kaLi}}
 * Norwegian:
