--- a/en/p/play.8442.wikitext
+++ b/en/p/play.8442.wikitext
@@ -362,6 +362,7 @@ The noun is from {{etyl|enm|en}} {{term|pleye|lang=enm}}, from {{etyl|ang|en}} {
 * Italian: {{t|it|riproduci}}
 * Kurdish:
 *: Sorani: {{t+|ku|لێدان|tr=lédan|sc=ku-Arab}}
+* Latvian: {{t|lv|atskaņot}}
 * Macedonian: {{t|mk|пушта}}
 * Pashto: {{t+|ps|ږغول|tr=zhaγawəl|sc=ps-Arab}}
 * Polish: {{t+|pl|grać}}, {{t+|pl|odtwarzać}}
