--- a/en/b/blond.6878.wikitext
+++ b/en/b/blond.6878.wikitext
@@ -192,6 +192,7 @@ Alternative etymology connects {{etyl|frk|-}} {{m|frk|*blund}} to {{etyl|gem-pro
 {{nl-decl-adj}}
 
 [[Category:nl:Hair]]
+[[Category:nl:Yellows]]
 
 ----
 
