--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -219,6 +219,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 {{trans-mid}}
 * German: {{t+|de|ziehen}}
 * Italian: {{t+|it|tirare}}
+* Russian: {{t+|ru|тянуть|impf|tr=tjanútʹ}}, {{t+|ru|потянуть|pf|tr=potjanútʹ}}, {{t+|ru|тащить|impf|tr=taščítʹ}}, {{t+|ru|потащить|pf|tr=potaščítʹ}}
 * Scottish Gaelic: {{t|gd|slaod}}, {{t|gd|tarraing}}
 * Spanish: {{t+|es|halar}}, {{t+|es|jalar}}
 * Swedish: {{t+|sv|dra}}
