--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -297,6 +297,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 {{trans-top|attractive force}}
 * Finnish: {{t+|fi|veto}}, {{t+|fi|vetovoima}}, {{t+|fi|imu}}
 {{trans-mid}}
+* Russian: {{t+|ru|притяжение|n|sc=Cyrl}}, {{t+|ru|тяга|f|sc=Cyrl}}
 * Swedish: {{t+|sv|attraktion|c}}, {{t|sv|dragkraft|c}}
 {{trans-bottom}}
 
