--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -290,14 +290,14 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Kurdish:
 *: Sorani: {{t|ku|ڕاکێشان}}
 {{trans-mid}}
-* Russian: {{t+|ru|тяга|f|tr=tjága|sc=Cyrl}}
+* Russian: {{t+|ru|тя́га|f|tr=tjága|sc=Cyrl}}
 * Swedish: {{t+|sv|ryck|n}}
 {{trans-bottom}}
 
 {{trans-top|attractive force}}
 * Finnish: {{t+|fi|veto}}, {{t+|fi|vetovoima}}, {{t+|fi|imu}}
 {{trans-mid}}
-* Russian: {{t+|ru|притяжение|n|sc=Cyrl}}, {{t+|ru|тяга|f|sc=Cyrl}}, {{t+|ru|влечение|n|sc=Cyrl}}
+* Russian: {{t+|ru|притяже́ние|n|sc=Cyrl}}, {{t+|ru|тя́га|f|sc=Cyrl}}, {{t+|ru|влече́ние|n|sc=Cyrl}} ''(emotional)''
 * Swedish: {{t+|sv|attraktion|c}}, {{t|sv|dragkraft|c}}
 {{trans-bottom}}
 
@@ -315,7 +315,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 {{trans-top|appeal}}
 * Finnish: {{t+|fi|vetovoima}}, {{t|fi|viehätys}}
 {{trans-mid}}
-* Russian: {{t+|ru|притягательность|f|sc=Cyrl}}
+* Russian: {{t+|ru|притяга́тельность|f|sc=Cyrl}}
 * Swedish: {{t|sv|dragkraft|c}}
 {{trans-bottom}}
 
