--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -91,6 +91,7 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|crē
 {{trans-top|to move in a stealthy or secret manner}}
 * Finnish: {{t|fi|hiipiä}}, {{t|fi|hivuttautua}}
 {{trans-mid}}
+* Russian: {{t+|ru|красться|impf|sc=Cyrl}}, {{t+|ru|подкрадываться|impf|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|to slip, or to become slightly displaced}}
