--- a/en/c/creep.6841.wikitext
+++ b/en/c/creep.6841.wikitext
@@ -103,6 +103,7 @@ From {{etyl|enm|en}} {{term|crepen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|crē
 {{trans-top|to move or behave with servility}}
 * Finnish: {{t|fi|nöyristellä}}, {{t|fi|ryömiä}}
 {{trans-mid}}
+* Russian: {{t+|ru|пресмыкаться|impf|sc=Cyrl}}
 {{trans-bottom}}
 
 {{trans-top|to have a sensation as of insects creeping on the skin}}
