--- a/en/c/choose.6832.wikitext
+++ b/en/c/choose.6832.wikitext
@@ -5,7 +5,7 @@
 * [[chuse]]
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|ċēosan||to choose, seek out, select, elect, decide, test, accept, settle for, approve}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*keusaną||to taste, choose}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵews-||to taste, choose, enjoy}}. Cognate with {{etyl|sco|-}} {{term|chose|lang=sco}},  {{term|chese||to choose|lang=sco}}, French {{term|choisir||to choose|lang=fr}}, {{etyl|frr|-}} {{term|kese||to choose|lang=frr}}, {{etyl|fy|-}} {{term|kieze||to choose|lang=fy}}, Dutch {{term|kiezen||to choose|lang=nl}}, {{etyl|nds|-}} {{term|kesen||to choose|lang=nds}}, {{etyl|de|-}} {{term|kiesen||to choose|lang=de}}, {{etyl|da|-}} {{term|kyse||to choose|lang=da}}, Norwegian {{term|kjose||to choose|lang=no}}, {{etyl|sv|-}} {{term|tjusa||to charm, allure|lang=sv}}, Icelandic {{term|kjósa||to choose, vote, elect|lang=is}}, Gothic {{term|𐌺𐌹𐌿𐍃𐌰𐌽||tr=kiusan|to test|lang=got}}, {{etyl|la|-}} {{term|gustō||taste, sample|pos=verb|lang=la}}.
+From {{etyl|enm|en}} {{m|enm|chosen}}, {{m|enm|chesen}}, from {{etyl|ang|en}} {{m|ang|ċēosan||to choose, seek out, select, elect, decide, test, accept, settle for, approve}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*keusaną||to taste, choose}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*ǵews-||to taste, choose, enjoy}}. Cognate with {{etyl|sco|-}} {{m|sco|chose}}, {{m|sco|chese||to choose}}, {{etyl|fr|-}} {{m|fr|choisir||to choose}}, {{etyl|frr|-}} {{m|frr|kese||to choose}}, {{etyl|fy|-}} {{m|fy|kieze||to choose}}, {{etyl|nl|-}} {{m|nl|kiezen||to choose}}, {{etyl|nds|-}} {{m|nds|kesen||to choose}}, {{etyl|de|-}} {{m|de|kiesen||to choose}}, {{etyl|da|-}} {{m|da|kyse||to choose}}, {{etyl|no|-}} {{m|no|kjose||to choose}}, {{etyl|sv|-}} {{m|sv|tjusa||to charm, allure}}, {{etyl|is|-}} {{m|is|kjósa||to choose, vote, elect}}, {{etyl|got|-}} {{m|got|𐌺𐌹𐌿𐍃𐌰𐌽||to test}}, {{etyl|la|-}} {{m|la|gusto|gustō|taste, sample|pos=verb}}.
 
 ====Pronunciation====
 * {{enPR|cho͞oz}}, {{IPA|/tʃuːz/|lang=en}}
@@ -42,10 +42,10 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Armenian: {{t|hy|ընտրել}}
 * Asturian: {{t|ast|escoyer}}, {{t|ast|elixir}}
 * Azeri: {{t+|az|seçmək}}
-* Belarusian: {{t|be|выбіраць|impf|tr=vybirácʹ|sc=Cyrl}}, {{t|be|выбраць|pf|tr=výbracʹ|sc=Cyrl}}
+* Belarusian: {{t|be|выбіра́ць|impf|sc=Cyrl}}, {{t|be|вы́браць|pf|sc=Cyrl}}
 * Bengali: {{t|bn|নির্বাচন করা|tr=nirbacôn kôra|sc=Beng}}
-* Bulgarian: {{t+|bg|подбирам|impf|tr=podbíram}}
-* Burmese: {{t+|my|ရွေး|tr=jwei:|sc=Mymr}}
+* Bulgarian: {{t+|bg|подби́рам|impf}}
+* Burmese: {{t+|my|ရွေး|sc=Mymr}}
 * Catalan: {{t+|ca|triar}}, {{t+|ca|escollir}}, {{t+|ca|elegir}}
 * Chinese:
 *: Mandarin: {{t+|cmn|選擇|sc=Hani}}, {{t+|cmn|选择|tr=xuǎnzé|sc=Hani}}, {{t|cmn|挑選|sc=Hani}}, {{t+|cmn|挑选|tr=tiāoxuǎn|sc=Hani}}
@@ -60,7 +60,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Galician: {{t+|gl|escoller}}, {{t|gl|elixir}}
 * Georgian: {{t|ka|ამორჩევა|sc=Geor}}
 * German: {{t+|de|wählen}}, {{t+|de|auswählen}}
-* Greek: {{t+|el|διαλέγω|tr=dialégo}}
+* Greek: {{t+|el|διαλέγω}}
 * Haitian Creole: {{t|ht|chwazi}}
 * Hebrew: {{t|he|בחר|tr=bakhár}}
 * Hindi: {{t|hi|चुनना|tr=cunnā}}
@@ -73,19 +73,19 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Italian: {{t+|it|scegliere}}, {{t+|it|selezionare}}
 * Japanese: {{t|ja|選ぶ|tr=えらぶ, erabu}}
 * Jèrriais: {{t|roa-jer|chouaîsi}}
-* Kazakh: {{t|kk|таңдау|tr=tañdaw|sc=Cyrl}}
+* Kazakh: {{t|kk|таңдау|sc=Cyrl}}
 * Korean: {{t+|ko|고르다|sc=Hang}}
-* Kyrgyz: {{t|ky|тандоо|tr=tandoo|sc=Cyrl}}
-* Lao: {{t|lo|ເລືອກ|tr=lɨ̑aːk|sc=Laoo}}
+* Kyrgyz: {{t|ky|тандоо|sc=Cyrl}}
+* Lao: {{t|lo|ເລືອກ|sc=Laoo}}
 {{trans-mid}}
 * Latin: {{t+|la|lego}}
 * Latvian: {{t|lv|atlasīt}}
 * Lithuanian: {{t|lt|pasirinkti}}
-* Macedonian: {{t|mk|избира|impf|tr=ízbira|sc=Cyrl}}
+* Macedonian: {{t|mk|и́збира|impf|sc=Cyrl}}
 * Malay: {{t|ms|pilih}}
 * Maltese: {{t|mt|għażel}}
 * Maori: {{t|mi|whiri}}
-* Mongolian: {{t|mn|сонгох|tr=songoh|sc=Cyrl}}
+* Mongolian: {{t|mn|сонгох|sc=Cyrl}}
 * Ngazidja Comorian: {{t|zdj|tsungua|alt=utsungua}}
 * Norwegian:
 *: Bokmål: {{t+|nb|velge}}
@@ -96,23 +96,23 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Portuguese: {{t+|pt|escolher}}
 * Quechua: {{t|qu|akllay}}
 * Romanian: {{t+|ro|alege}}
-* Russian: {{t+|ru|выбирать|impf|tr=vybirátʹ}}, {{t+|ru|выбрать|pf|tr=výbratʹ}}
+* Russian: {{t+|ru|выбира́ть|impf}}, {{t+|ru|вы́брать|pf}}
 * Scottish Gaelic: {{t|gd|tagh}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|изабрати}}, {{t|sh|одабрати}}
 *: Roman: {{t|sh|izabrati}}, {{t|sh|odabrati}}
-* Sinhalese: {{t|si|තෝරා ගන්නවා|tr=tōrā gannavā|sc=Sinh}}
+* Sinhalese: {{t|si|තෝරා ගන්නවා|sc=Sinh}}
 * Slovak: {{t|sk|vyberať|impf}}, {{t|sk|vybrať|pf}}
 * Slovene: {{t+|sl|izbrati}}
 * Spanish: {{t+|es|escoger}}
 * Swedish: {{t+|sv|välja}}
 * Tagalog: {{t+|tl|pili}}
-* Tajik: {{t|tg|газидан|tr=gazidan|sc=Cyrl}}
-* Tatar: {{t|tt|сайларга|tr=saylarğa|sc=Cyrl}}
+* Tajik: {{t|tg|газидан|sc=Cyrl}}
+* Tatar: {{t|tt|сайларга|sc=Cyrl}}
 * Thai: {{t|th|เลือก|tr=lêuak}}, {{t+|th|คัดเลือก|tr=kát lêuak}}
 * Turkish: {{t+|tr|seçmek}}
 * Turkmen: {{t|tk|seçmek}}, {{t|tk|saýlamak}}
-* Ukrainian: {{t|uk|вибирати|impf|tr=vybyráty|sc=Cyrl}}, {{t|uk|вибрати|pf|tr=výbraty|sc=Cyrl}}
+* Ukrainian: {{t|uk|вибира́ти|impf|sc=Cyrl}}, {{t|uk|ви́брати|pf|sc=Cyrl}}
 * Urdu: {{t|ur|چننا|tr=cunnā}}
 * Uzbek: {{t|uz|tanlamoq}}
 * Venetian: {{t+|vec|ẑernir}}, {{t|vec|sièlder}}
@@ -140,7 +140,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Galician: {{t|gl|elixir}}
 * Georgian: {{t|ka|ამორჩევა|sc=Geor}}
 * German: {{t+|de|wählen}}
-* Greek: {{t+|el|εκλέγω|tr=eklégo}}
+* Greek: {{t+|el|εκλέγω}}
 * Hebrew: {{t|he|בחר|tr=bakhár}}
 * Hindi: {{t|hi|चुनना|tr=cunnā}}
 * Hungarian: {{t+|hu|megválaszt}}, {{t+|hu|választ}}
@@ -156,13 +156,13 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Lithuanian: {{t-needed|lt}}
 * Malay: {{t|ms|pilih}}
 * Maltese: {{t|mt|ħatar}}, {{t|mt|talla'}}
-* Mongolian: {{t|mn|сонгох|tr=songoh|sc=Cyrl}}
+* Mongolian: {{t|mn|сонгох|sc=Cyrl}}
 * Persian: {{t+|fa|برگزیدن}}, {{t+|fa|انتخاب کردن|sc=fa-Arab}}
 * Polish: {{t+|pl|wybierać}}, {{t+|pl|wybrać}}
 * Portuguese: {{t+|pt|escolher}}
 * Quechua: {{t|qu|akllay}}
 * Romanian: {{t+|ro|alege}}
-* Russian: {{t+|ru|выбирать|impf|tr=vybirátʹ}}, {{t+|ru|выбрать|pf|tr=výbratʹ}}, {{t+|ru|избирать|impf|tr=izbirátʹ}}, {{t+|ru|избрать|pf|tr=izbrátʹ}}, {{t+|ru|взять|tr=vzjat’}}
+* Russian: {{t+|ru|выбира́ть|impf}}, {{t+|ru|вы́брать|pf}}, {{t+|ru|избира́ть|impf}}, {{t+|ru|избра́ть|pf}}, {{t+|ru|взять}}
 * Scots: {{t|sco|wale}}
 * Scottish Gaelic: {{t|gd|tagh}}
 * Serbo-Croatian:
@@ -200,7 +200,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * Maltese: {{t|mt|iddeċieda}}
 * Portuguese: {{t+|pt|escolher}}, {{t+|pt|escolher|m}}
 * Romanian: {{t|ro|vrea}}, {{t+|ro|prefera}}
-* Russian: {{t+|ru|решать|impf|tr=rešátʹ}}, {{t+|ru|решить|pf|tr=rešítʹ}}
+* Russian: {{t+|ru|реша́ть|impf}}, {{t+|ru|реши́ть|pf}}
 * Scottish Gaelic: {{t|gd|tagh}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|одлучити}}, {{t|sh|одабрати}}
@@ -229,7 +229,7 @@ From {{etyl|enm|en}} {{term|chosen|lang=enm}}, {{term|chesen|lang=enm}}, from {{
 * {{projectlink|wikipedia|Binomial coefficient}}
 
 ===Etymology 2===
-From {{etyl|enm|en}} {{term|chose|lang=enm}}, {{term|chos|lang=enm}}, {{term|chooce|lang=enm}}, from {{etyl|enm|en}} {{term|chosen||to choose|lang=enm}}. see above. Cognate with {{etyl|sco|-}} {{term|chose||choosing, choice, selection|lang=sco}}.
+From {{etyl|enm|en}} {{m|enm|chose}}, {{m|enm|chos}}, {{m|enm|chooce}}, from {{etyl|enm|en}} {{m|enm|chosen||to choose}}. see above. Cognate with {{etyl|sco|-}} {{m|sco|chose||choosing, choice, selection}}.
 
 ====Noun====
 {{en-noun|chooses}}
