--- a/en/假/假.11095.wikitext
+++ b/en/假/假.11095.wikitext
@@ -25,7 +25,7 @@
 ==Japanese==
 
 ===Kanji===
-{{ja-kanji|grade=|rs=人09}}
+{{ja-kanji|grade=|rs=人09|style=ky|shin=仮}}
 
 ====Readings====
 * {{ja-readings|on=[[か]] (ka), [[け]] (ke)|kun=[[かり]] (kari)}}
