Japanese def. added <垖#28830636>

--- a/en/垖/垖.13082.wikitext
+++ b/en/垖/垖.13082.wikitext
@@ -22,6 +22,18 @@
 
 ----
 
+==Japanese==
+
+===Kanji===
+{{ja-kanji|grade=|rs=土08}}
+
+# piled high
+
+====Readings====
+* {{ja-readings|on=[[たい]] (tai), [[つい]] (tsui)|kun=[[うずたかい]] (uzutakai)}}
+
+----
+
 ==Mandarin==
 
 ===Hanzi===
