--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -216,7 +216,7 @@ From {{etyl|la|en}} {{term|porta||passage, gate|lang=la}}, reinforced in {{etyl|
 #: ''...her '''ports''' being within sixteen inches of the water...'' — [[w:Walter Raleigh|Sir W. Raleigh]]
 # {{context|curling|bowls|lang=en}} A space between two [[stone]]s wide enough for a delivered stone or bowl to pass through.
 # An opening where a connection (such as a pipe) is made.
-# {{context|computing|lang=en}} A logical or physical construct in and from which data are transferred. {{projectlink|wikipedia|Computer port (hardware)}}
+# {{context|computing|lang=en}} A logical or physical construct in and from which data are transferred. {{pedialite|Computer port (hardware)}}
 # {{context|computing|lang=en}} A female connector of an electronic device, into which a cable's male connector can be inserted.
 
 =====Derived terms=====
@@ -272,7 +272,7 @@ From {{etyl|fro|en}} {{term|porter|lang=fr}}, from {{etyl|la|en}} {{term|portare
 # {{context|military|lang=en}} To hold or carry (a weapon) with both hands so that it lays diagonally across the front of the body, with the barrel or similar part near the left shoulder and the right hand grasping the small of the stock; or, to throw (the weapon) into this position on command.
 #: '''''Port''' arms!''
 #: ''...the angelic squadron...began to hem him round with '''ported''' spears.'' — [[w:John Milton|Milton]], ''[[w:Paradise Lost|Paradise Lost]]'' (1667), [[s:Paradise Lost/Book IV|book IV]]
-# {{context|computing|video games|lang=en}} To adapt, modify, or create a new version of, a program so that it works on a different platform. {{projectlink|wikipedia|Porting|Porting (computing)}}
+# {{context|computing|video games|lang=en}} To adapt, modify, or create a new version of, a program so that it works on a different platform. {{pedialite|Porting|Porting (computing)}}
 # {{context|telephony|lang=en}} To carry or transfer an existing telephone number from one telephone service provider to another.
 
 =====Derived terms=====
