--- a/en/p/Pythonesque.2111.wikitext
+++ b/en/p/Pythonesque.2111.wikitext
@@ -23,7 +23,7 @@ From the name of the British comedy troupe, [[Monty Python]], due to the type of
 #*: If you want to cut out a third line, you can rewrite the above with a lambda function, which turns four lines into one (how very '''Pythonesque''').
 
 ====External links====
-* {{projectlink|wikipedia|Monty Python}}
-* {{projectlink|wikipedia|Monty Python's Flying Circus}}
+* {{pedialite|Monty Python}}
+* {{pedialite|Monty Python's Flying Circus}}
 [[Category:English eponyms]]
 [[Category:English words suffixed with -esque]]
