/* See also */Restore pedialite using [[Project:AWB|AWB]] <curtain#28835750>

--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -184,7 +184,7 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 ===See also===
 * [[blind]]
 * [[drape]]
-* {{projectlink|wikipedia}}
+* {{pedialite}}
 
 [[Category:en:Furniture]]
 [[Category:en:Theater]]
