/* External links */Restore pedialite using [[Project:AWB|AWB]] <brick#28835759>

--- a/en/b/brick.7395.wikitext
+++ b/en/b/brick.7395.wikitext
@@ -290,7 +290,7 @@ From {{etyl|frm|en}} {{term|brique|lang=fr}}, probably from a {{etyl|gem|en}} so
 * [[brickfielder]]
 
 ===External links===
-* {{projectlink|wikipedia}}
+* {{pedialite}}
 
 [[Category:en:Building materials]]
 
