--- a/en/p/port.1843.wikitext
+++ b/en/p/port.1843.wikitext
@@ -459,19 +459,26 @@ From {{etyl|fro|fr}} {{m|fro|port}}, from {{etyl|la|fr}} {{term|portus|lang=la}}
 
 ==Irish==
 
-===Noun===
-{{ga-noun|poirt|poirt|g=m}}
+===Etymology 1===
+From {{etyl|sga|ga}} {{m|sga|port||tune, melody}}.
 
-# [[tune]]
-#* ''Is buaine '''port''' ná glór na n-éan; is buaine focal ná toice an tsaoil.''
-#** A tune is more lasting than the song of birds; a word is more lasting than the wealth of the world.
+====Noun====
+{{ga-noun|g=m|poirt|poirt}}
+
+# {{label|ga|music}} [[tune]]
+#* {{usex|Is buaine '''port''' ná glór na n-éan; is buaine focal ná toice an tsaoil.|t=A '''tune''' is more lasting than the song of birds; a word is more lasting than the wealth of the world.|lang=ga}}
 # [[jig]] {{qualifier|dance}}
 
-====Declension====
+=====Declension=====
 {{ga-decl-m1|p|ort|oirt}}
 
-===Noun===
-{{ga-noun|poirt|poirt|g=m}}
+[[Category:ga:Dances]]
+
+===Etymology 2===
+From {{etyl|sga|ga}} {{m|sga|port||place, spot, locality; stead, abode; stronghold, fortress; bank, shore (of river or sea); landing-place, haven; bank, mound, entrenchment; }}, from {{etyl|la|ga}} {{m|la|portus}}.
+
+====Noun====
+{{ga-noun|g=m|poirt|poirt}}
 
 # [[landing]]-place
 # [[harbor]], [[#English|port]]
@@ -483,13 +490,13 @@ From {{etyl|fro|fr}} {{m|fro|port}}, from {{etyl|la|fr}} {{term|portus|lang=la}}
 # [[fortified]] place, [[stronghold]]
 # [[occupied]] place, [[seat]], [[center]]
 
-====Declension====
+=====Declension=====
 {{ga-decl-m1|p|ort|oirt}}
+
+[[Category:ga:Geography]]
 
 ===Mutation===
 {{ga mut cons|p|ort}}
-
-[[Category:ga:Dances]]
 
 ----
 
