t+myv:[[виш]] ([[WT:EDIT|Assisted]]) <spelt#28874562>

--- a/en/s/spelt.7213.wikitext
+++ b/en/s/spelt.7213.wikitext
@@ -44,6 +44,7 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|spelt||spelt, corn|lang=ang}},
 * Czech: {{t+|cs|špalda|f}}
 * Danish: {{t|da|spelt}}
 * Dutch: {{t+|nl|spelt}}
+* Erzya: {{t|myv|виш}}
 * Esperanto: {{t|eo|spelto}}
 * Estonian: {{t|et|speltanisu}}
 * Finnish: {{t|fi|spelttivehnä}}, {{t|fi|speltti}}
