edit section 2.1 ([[WT:EDIT|Assisted]]) <垒#28876625>

--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -21,8 +21,9 @@
 |mc=y
 |oc=y
 |ma=
-|cat=n
-}}
+|cat=n}}
+
+[[Category:CJKV characters simplified differently in Japan and China|壘3]]
 
 [[fr:垒]]
 [[mg:垒]]
