--- a/en/垒/垒.13078.wikitext
+++ b/en/垒/垒.13078.wikitext
@@ -1,5 +1,6 @@
 {{also|壘}}
 ==Translingual==
+{{ja-forms|[[塁]]|垒|[[壘]]}}
 
 ===Han character===
 {{Han char|rn=32|rad=土|as=06|sn=9|four=|canj=戈戈戈土 (IIIG)|ids=⿱[[厽]][[土]]}}
