--- a/en/c/cling.6835.wikitext
+++ b/en/c/cling.6835.wikitext
@@ -6,7 +6,7 @@
 * {{rhymes|ɪŋ|lang=en}}
 
 ===Etymology===
-From {{etyl|enm|en}} {{m|enm|clingen}}, {{etyl|ang|en}} {{term|clingan||to adhere|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|en}} {{m|gem-pro|klinganą}}; akin to {{etyl|da|-}} {{term|klynge||to cluster, to crowd|lang=da}}. Compare {{term|clump|lang=en}}.
+From {{etyl|enm|en}} {{m|enm|clingen}}, {{etyl|ang|en}} {{term|clingan||to adhere|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|en}} {{m|gem-pro|*klinganą}}; akin to {{etyl|da|-}} {{term|klynge||to cluster, to crowd|lang=da}}. Compare {{term|clump|lang=en}}.
 
 ===Noun===
 {{en-noun}}
