--- a/en/c/coat.7393.wikitext
+++ b/en/c/coat.7393.wikitext
@@ -16,6 +16,8 @@ From {{etyl|enm|en}} {{term|coate|lang=enm}}, {{term|cotte|lang=enm}}, from {{et
 {{en-noun|~}}
 
 # {{context|countable|lang=en}} An [[outer]] [[garment]] [[cover]]ing the upper [[torso]] and [[arms]].<sup>{{w|Coat (clothing)|Wp}}</sup>
+#*{{RQ:Chrsty Atbgrfy|II|4}}
+#*: Mind you, clothes were clothes in those days. [&hellip;]&nbsp; Frills, ruffles, flounces, lace, complicated seams and gores: not only did they sweep the ground and have to be held up in one hand elegantly as you walked along, but they had little capes or '''coats''' or feather boas.
 # {{context|countable|lang=en}} A [[covering]] of [[material]], such as [[paint]].<sup>{{w|Paint|Wp}}</sup>
 #* {{w|John Milton}} (1608-1674)
 #*: Fruit of all kinds, in '''coat''' / Rough or smooth rined, or bearded husk, or shell.
