--- a/en/c/come.6838.wikitext
+++ b/en/c/come.6838.wikitext
@@ -351,10 +351,8 @@ The collocations “[[come with]]” and “[[come along]]” mean {{term|accomp
 #: {{ux|en|'''Come come'''! Stop crying.&emsp; '''Come''' now! You must eat it.}}
 # An [[exclamation]] to express [[encouragement]], or to precede a request.
 #: {{ux|en|'''Come come'''! You can do it.&emsp; '''Come''' now! It won't bite you.}}
-#*{{quote-book|year=1908|author=[http://openlibrary.org/authors/OL2430852A W. B. M. Ferguson]
-|title=[http://books.google.com/books?id=NeBqnQEACAAJ Zollenstein]|chapter=1
-|passage=“I'm through with all pawn-games,” I laughed. “'''Come''', let us have a game of lansquenet. Either I will take a farewell fall out of you or you will have your sevenfold revenge”.}}
-
+#*{{RQ:Frgsn Zlnstn|1}}
+#*:“I'm through with all pawn-games,” I laughed. “'''Come''', let us have a game of lansquenet. Either I will take a farewell fall out of you or you will have your sevenfold revenge”.
 
 ===References===
 <references/>
