--- a/en/s/saffron.4771.wikitext
+++ b/en/s/saffron.4771.wikitext
@@ -200,6 +200,7 @@ The distinction between the ''plant'' and ''spice'' senses is often blurred.
 * Portuguese: {{t|pt|açafroado}}
 * Romanian: {{t+|ro|șofrăniu}}
 * Russian: {{t+|ru|шафранный|tr=šafránnyj}}, {{t+|ru|шафрановый|tr=šafránovyj}}
+* Spanish: de {{t|es|azafrán}}
 * Swedish: {{t|sv|saffransfärgad}}, {{t|sv|saffransgul}}
 * Urdu: {{t|ur|کیسری|tr=kesarī}}, {{t|ur|کیسریا|tr=kesariyā}}
 * Volapük: {{t|vo|safranayelovik}}
