--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -42,10 +42,11 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Estonian: {{t|et|loendus}}
 * French: {{t+|fr|compte|m}}, {{t+|fr|décompte|m}}
 * Galician: {{t|gl|conta|f}}
-{{trans-mid}}
 * German: {{t+|de|zählen}}
+{{trans-mid}}
 * Greek: {{t+|el|μέτρημα|n|sc=Grek}}, {{t+|el|μέτρηση|f|sc=Grek}}, {{t+|el|καταμέτρηση|f|sc=Grek}}
 * Icelandic: {{t|is|talning|f}}
+* Italian: {{t+|it|conto|m}}, {{t+|it|conteggio|m}}, {{t+|it|calcolo|m}}
 * Portuguese: {{t+|pt|contagem|f}}
 * Romanian: {{t+|ro|socoti}}
 * Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}
