--- a/en/f/found.6885.wikitext
+++ b/en/f/found.6885.wikitext
@@ -55,6 +55,13 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * [[foundation]]
 * [[founder]]
 
+====Synonyms====
+* {{sense|to start organization}} [[establish]]
+
+====Antonyms====
+* {{sense|to begin building}} [[ruin]]
+* {{sense|to start organization}} [[dissolve]], [[abolish]]
+
 =====Translations=====
 {{trans-top|to begin building}}
 * Armenian: {{t|hy|հիմքը դնել|tr=himkʿë dnel}}, {{t|hy|հիմքը գցել|tr=himk’ë gc’el}}
@@ -64,7 +71,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * German: {{t+|de|errichten}}
 * Greek: {{t+|el|θεμελιώνω|sc=Grek}}
 * Italian: {{t+|it|fondare}}
-* Japanese: {{t-needed|ja}}
+* Japanese: {{t|ja|着工|alt=着工する|tr=chakkō suru}}
 * Khmer: {{t+|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
 * Korean: {{t-needed|ko}}
 * Norwegian: {{t|no|grunnlegge}}
@@ -91,7 +98,7 @@ From {{etyl|xno|en}} {{term|founder|lang=fro}} (French: {{term|fonder|lang=fr}})
 * German: {{t+|de|gründen}}
 * Greek: {{t+|el|ιδρύω|sc=Grek}}, {{t+|el|συστήνω|sc=Grek}}
 * Italian: {{t+|it|fondare}}
-* Japanese: {{t-needed|ja}}
+* Japanese: {{t|ja|興す|tr=okosu}}, {{t|ja|打ち立てる|tr=uchitateru}}, {{t|ja|設立|alt=設立する|tr=setsuritsu suru}}
 * Khmer: {{t+|km|បង្កើត|tr=bɑŋkaət|sc=Khmr}}
 {{trans-mid}}
 * Korean: {{t-needed|ko}}
