--- a/en/惡/惡.15606.wikitext
+++ b/en/惡/惡.15606.wikitext
@@ -34,7 +34,7 @@
 ==Japanese==
 
 ===Kanji===
-{{ja-kanji|grade=|rs=心08}}
+{{ja-kanji|grade=|rs=心08|style=ky|shin=悪}}
 
 # {{defn|lang=ja|sort=心08}}
 
