--- a/en/p/plum.4770.wikitext
+++ b/en/p/plum.4770.wikitext
@@ -24,7 +24,7 @@ From {{etyl|ang|en}} {{m|ang|plÅ«me}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*prÅ
 # A [[raisin]], when used in a pudding or cake.
 # {{context|pejorative|lang=en}} A [[fool]], [[idiot]].
 # {{context|slang|usually in plural|lang=en}} A [[testicle]].
-# The edible, fleshy stone fruit of several species sharing {{taxlink|Prunus subg. Prunus|subgenus|noshow=1}} with ''Prunus domestica'' including, among others:
+# The edible, fleshy stone fruit of several species sharing ''[[Prunus subg. Prunus]]'' with ''Prunus domestica'' including, among others:
 ## {{taxlink|Prunus sect. Prunus|section|noshow=1}}
 ### ''[[Prunus cerasifera]]'', the [[cherry plum]] or [[myrobalan]]
 ### {{taxlink|Prunus salicina|species|noshow=1}} the [[Chinese plum]] or {{vern|Japanese plum|pedia=1}}
