/* Noun */ Tidy <stomach#28906732>

--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -18,7 +18,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 # {{context|informal|lang=en}} The [[belly]].
 # {{context|obsolete|lang=en}} [[pride|Pride]], [[haughtiness]].
 #* '''1590''', Edmund Spenser, ''The Faerie Queene'', II.vii:
-#*: Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall {{...}}
+#*: Sterne was his looke, and full of '''stomacke''' vaine, / His portaunce terrible, and stature tall&nbsp;[…].
 #* '''1613''', {{w|William Shakespeare}}, ''[[s: The Life of King Henry the Eighth| The Life of King Henry the Eighth]]'', IV. ii. 34:
 #*: He was a man / Of an unbounded '''stomach''', ever ranking / Himself with princes;
 #* John Locke
