--- a/en/f/find.6884.wikitext
+++ b/en/f/find.6884.wikitext
@@ -340,6 +340,7 @@ From {{etyl|enm|en}} {{term|finden|lang=enm}}, from {{etyl|ang|en}} {{term|finda
 [[kk:find]]
 [[ku:find]]
 [[lo:find]]
+[[lv:find]]
 [[lt:find]]
 [[li:find]]
 [[hu:find]]
