--- a/en/c/cut.6843.wikitext
+++ b/en/c/cut.6843.wikitext
@@ -828,6 +828,7 @@ From {{etyl|poz-swa-pro|kyi}} {{m|poz-swa-pro|*likud}}, from {{etyl|poz-pro|kyi}
 [[kk:cut]]
 [[ku:cut]]
 [[lo:cut]]
+[[lv:cut]]
 [[lt:cut]]
 [[li:cut]]
 [[hu:cut]]
