--- a/en/慆/慆.15705.wikitext
+++ b/en/慆/慆.15705.wikitext
@@ -31,7 +31,9 @@
 ===Kanji===
 {{ja-kanji|grade=|rs=心10}}
 
-# {{defn|lang=ja|sort=心10}}
+# [[excessive]]
+# [[dissolute]]
+# [[delighted]]
 
 ====Readings====
 * {{ja-readings|on=[[とう]] (tō)|kun=[[よろこぶ]] (yorokobu)}}
