--- a/en/c/curtain.7391.wikitext
+++ b/en/c/curtain.7391.wikitext
@@ -19,15 +19,13 @@ From {{etyl|fro|en}} {{term|cortine|lang=fro}}, from {{etyl|la|en}} {{term|corti
 #* {{quote-book|year=1905|author=[[w:Emma Orczy|Baroness Emmuska Orczy]]
 |title=[[w:The Case of Miss Elliott|The Lisson Grove Mystery]]
 |chapter=2|url=http://openlibrary.org/works/OL8479084W
-|passage=“H'm&nbsp;!&rdquo; he said, &ldquo;so, so&mdash;it is a tragedy in a prologue and three acts. I am going down this afternoon to see the '''curtain''' fall for the third time on what [...] will prove a good burlesque&nbsp;; but it all began dramatically enough. It was last Saturday […] that two boys, playing in the little spinney just outside Wembley Park Station, came across three large parcels done up in American cloth. […]”}}
+|passage=“H'm&nbsp;!&rdquo; he said, &ldquo;so, so&mdash;it is a tragedy in a prologue and three acts. I am going down this afternoon to see the '''curtain''' fall for the third time on what{{...}}will prove a good burlesque&nbsp;; but it all began dramatically enough. It was last Saturday{{...}}that two boys, playing in the little spinney just outside Wembley Park Station, came across three large parcels done up in American cloth.{{nb...}}”}}
 # {{context|fortifications|lang=en}} The flat area of [[wall]] which connects two [[bastions]] or [[towers]]; the main area of a fortified wall.
-#* '''1603''', John Florio, translating Michel de Montaigne, ''Essays'', Folio Society 2006, vol. 1, p. 220:
-#*: Captain ''Rense'', beleagring the Citie of ''Errona'' for us, [...] caused a forcible mine to be wrought under a great '''curtine''' of the walles {{...}}
+#*{{RQ:Flr Mntgn Essays}}, Folio Society, 2006, vol.1, p.220:
+#*: Captain ''Rense'', beleagring the Citie of ''Errona'' for us,{{...}}caused a forcible mine to be wrought under a great '''curtine''' of the walles{{nb...}}.
 # {{context|euphemistic|also "[[final curtain]]"|lang=en}} [[death|Death]].
 #* '''1979''', {{w|Monty Python}}, ''{{w|Always Look on the Bright Side of Life}}''
-#*: For life is quite absurd
-#*: And death's the final word
-#*: You must always face the '''curtain''' with a bow.
+#*: For life is quite absurd / And death's the final word / You must always face the '''curtain''' with a bow.
 # {{context|architecture|lang=en}} That part of a wall of a building which is between two [[pavilion]]s, [[tower]]s, etc.
 # {{context|obsolete|derogatory|lang=en}} A [[flag]]; an [[ensign]].
 #: {{rfquotek|Shakespeare}}
