--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -34,8 +34,8 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 
 =====Translations=====
 {{trans-top|the act of counting}}
-* Asturian: ; {{t|ast|cuenta|f}}
-* Bulgarian: {{t+|bg|смятане|n|tr=smjatane|sc=Cyrl}}
+* Asturian: {{t|ast|cuenta|f}}
+* Bulgarian: {{t+|bg|смятане|n}}
 * Catalan: {{t|ca|comptatge|m}}, {{t+|ca|compte|m}}
 * Danish: {{t|da|tælling|c}}
 * Dutch: {{t+|nl|telling}}
@@ -49,14 +49,14 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Italian: {{t+|it|conto|m}}, {{t+|it|conteggio|m}}, {{t+|it|calcolo|m}}
 * Portuguese: {{t+|pt|contagem|f}}
 * Romanian: {{t+|ro|socoti}}
-* Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}
+* Russian: {{t+|ru|счёт|m}}
 * Spanish: {{t+|es|cuenta|f}}
 {{trans-bottom}}
 
 {{trans-top|the result of a tally that reveals the number of items in a set}}
-* Armenian: {{t|hy|հաշվարկ|tr=hašvark}}
-* Breton: {{t+|br|kont|f}} -où {{g|p}}
-* Bulgarian: {{t+|bg|брой|m|tr=broj|sc=Cyrl}}
+* Armenian: {{t|hy|հաշվարկ}}
+* Breton: {{t|br|kont|?}}
+* Bulgarian: {{t+|bg|брой|m}}
 * Catalan: {{t+|ca|compte|m}}
 * Classical Nahuatl: {{t|nci|pōhualli}}
 * Czech: {{t+|cs|počet|n}}
@@ -75,25 +75,25 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Navajo: {{t|nv|nambooígíí}}
 * Portuguese: {{t+|pt|contagem|f}}
 * Romanian: {{t+|ro|numărare|f}}
-* Russian: {{t+|ru|счёт|m|tr=sčot|sc=Cyrl}}
+* Russian: {{t+|ru|счёт|m}}
 * Slovene: {{t|sl|rezultat|m}}
 * Spanish: {{t|es|conteo|m}}
 {{trans-bottom}}
 
 {{trans-top|a countdown}}
-* Armenian: {{t|hy|հաշվարկ|tr=hašvark}}
-* Bulgarian: {{t|bg|отброяване|n|tr=otbrojavane|sc=Cyrl}}
+* Armenian: {{t|hy|հաշվարկ}}
+* Bulgarian: {{t|bg|отброяване|n}}
 * Czech: {{t|cs|odpočet|n}}
 * Danish: {{t|da|nedtælling}}
 * Dutch: {{t|nl|aftelling|f}}
 * Finnish: {{t+|fi|lähtölaskenta}}
 * French: {{t+|fr|compte à rebours}}, {{t+|fr|décompte|m}}
 {{trans-mid}}
-* Macedonian: {{t|mk|одбројување|n|tr=odbrojúvanje}}
+* Macedonian: {{t|mk|одбројување|n}}
 * Polish: {{t+|pl|odliczanie|n}}
 * Portuguese: {{t|pt|contagem final|f}}
 * Romanian: {{t+|ro|numărătoare|f}}
-* Russian: {{t+|ru|отсчёт|m|tr=otsčot|sc=Cyrl}}
+* Russian: {{t+|ru|отсчёт|m}}
 * Slovene: {{t|sl|odštevanje|n}}
 {{trans-bottom}}
 
@@ -107,7 +107,7 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 {{trans-bottom}}
 
 {{checktrans-top}}
-* Telugu: {{t+check|te|లెక్క|tr=lekka|sc=Telu}}, {{t-check|te|లెక్కింపు|tr=lekkiMpu|sc=Telu}}
+* Telugu: {{t+check|te|లెక్క}}, {{t-check|te|లెక్కింపు}}
 {{trans-bottom}}
 
 ====Verb====
