--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -90,8 +90,8 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Japanese: {{t+|ja|数える|tr=かぞえる, kazoeru|sc=Jpan}}
 * Kazakh: {{t|kk|санау}}
 * Khmer: {{t+|km|រាប់|tr=roap|sc=Khmr}}
-{{trans-mid}}
 * Korean: {{t+|ko|세다|sc=Kore}}
+{{trans-mid}}
 * Kurdish:
 *: Sorani: {{t+|ku|ژماردن|tr=jmardin|sc=ku-Arab}}
 * Kyrgyz: {{t|ky|саноо}}
@@ -125,6 +125,9 @@ From {{etyl|enm|en}} {{term|counten|lang=enm}}, from {{etyl|xno|en}} {{term|cont
 * Sinhalese: {{t|si|ගණිනවා}}
 * Slovak: {{t|sk|počítať}}
 * Slovene: {{t|sl|šteti}}, {{t|sl|prešteti}}
+* Sorbian:
+*: Lower Sorbian: {{t|dsb|licyś|impf}}
+*: Upper Sorbian: {{t|hsb|ličić|impf}}
 * Spanish: {{t+|es|contar}}
 * Swedish: {{t+|sv|räkna}}
 * Tajik: {{t|tg|шумурдан}}
