Fixing translation table to use {{t}} ([[User:Kephir/gadgets/xte|assisted]]) — please review: fi <float#28961208>

--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -97,7 +97,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Arabic: {{t|ar|يطفو}}
 * Bulgarian: {{t|bg|държа се на повърхността|sc=Cyrl}}
 * Dutch: {{t+|nl|drijven}}
-* Finnish: {{t+|fi|kellua}}, {{t+|fi|pysyä}} {{t+|fi|pinta|alt=pinnalla}}
+* Finnish: {{t+|fi|kellua}}, {{t-check|fi|[[pysyä]] [[pinta|pinnalla]]}} {{attention|fi|2=was "{{t+|fi|pysyä}} {{t+|fi|pinta|alt=pinnalla}}" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
 * French: {{t+|fr|flotter}}
 * German: {{t|de|schwimmen}}
 * Hungarian: {{t+|hu|lebeg}}, {{t+|hu|úszik}}
