--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -246,7 +246,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-mid}}
 * Lithuanian: {{t|lt|plaustas|m}} {{i|raft}}, {{t|lt|plūdė|f}} {{i|of an angle or a net}}
 * Maori: {{t|mi|kārewa}}
-* Norwegian: {{t|no|dupp|m}} (angling float)
+* Norwegian: {{qualifier|angling float}} {{t-check|no|dupp|m}}
 * Portuguese: {{t+|pt|boia|f}}
 * Romanian: {{t+|ro|plută|f}}, {{t+|ro|plutitor|n}}
 * Russian: {{t+|ru|плот|m}} {{i|raft}}, {{t+|ru|поплаво́к|m}} {{i|of an angle or a net}}
@@ -288,7 +288,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-bottom}}
 
 {{trans-top|finance: offering of shares to the public}}
-* Finnish: {{t+|fi|yleinen}} {{t+|fi|osakeanti}}
+* Finnish: {{t-check|fi|[[yleinen]] [[osakeanti]]}} {{attention|fi|2=was "{{t+|fi|yleinen}} {{t+|fi|osakeanti}}" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
 {{trans-mid}}
 {{trans-bottom}}
 
