--- a/en/f/float.8440.wikitext
+++ b/en/f/float.8440.wikitext
@@ -57,7 +57,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * [[whatever floats your boat]]
 
 ====Translations====
-{{trans-top|be supported by a liquid}}
+{{trans-top|to be supported by a liquid}}
 * Arabic: {{t|ar|يطفو}}
 * Belarusian: {{i|abstract}} {{t|be|пла́ваць|impf}}, {{t|be|папла́ваць|pf}}, {{i|concrete}} {{t|be|плыць|impf}}, {{t|be|паплы́ць|pf}}
 * Bulgarian: {{t+|bg|плавам}}
@@ -93,11 +93,11 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Turkish: {{t-needed|tr}}
 {{trans-bottom}}
 
-{{trans-top|be capable of floating}}
+{{trans-top|to be capable of floating}}
 * Arabic: {{t|ar|يطفو}}
 * Bulgarian: {{t|bg|държа се на повърхността|sc=Cyrl}}
 * Dutch: {{t+|nl|drijven}}
-* Finnish: {{t+|fi|kellua}}, {{t-check|fi|[[pysyä]] [[pinta|pinnalla]]}} {{attention|fi|2=was "{{t+|fi|pysyä}} {{t+|fi|pinta|alt=pinnalla}}" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
+* Finnish: {{t+|fi|kellua}}, {{t|fi|[[pysyä]] [|pinnalla]]}} 
 * French: {{t+|fr|flotter}}
 * German: {{t|de|schwimmen}}
 * Hungarian: {{t+|hu|lebeg}}, {{t+|hu|úszik}}
@@ -110,7 +110,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
 
-{{trans-top|drift gently through the air}}
+{{trans-top|to drift gently through the air}}
 * Bulgarian: {{t|bg|нося се|sc=Cyrl}}
 * Finnish: {{t+|fi|leijua}}
 * French: {{t+|fr|flotter}}
@@ -127,7 +127,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
 
-{{trans-top|move in a particular direction with the liquid in which one is floating}}
+{{trans-top|to move in a particular direction with the liquid in which one is floating}}
 * Dutch: {{t+|nl|meedrijven}}
 * Finnish: {{t+|fi|lipua}}
 * French: {{t+|fr|flotter}}
@@ -139,7 +139,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
 
-{{trans-top|move in a fluid manner}}
+{{trans-top|to move in a fluid manner}}
 * Dutch: {{t+|nl|vloeien}}
 * Finnish: {{t+|fi|lipua}}, {{t+|fi|leijua}}
 * French: {{t+|fr|flotter}}
@@ -150,12 +150,12 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Spanish: {{t+|es|flotar}}
 {{trans-bottom}}
 
-{{trans-top|automatically adjust a parameter as related parameters change}}
+{{trans-top|to automatically adjust a parameter as related parameters change}}
 * Dutch: {{t+|nl|vloeien}}
 {{trans-mid}}
 {{trans-bottom}}
 
-{{trans-top|allow a price to be determined by the markets as opposed to by rule}}
+{{trans-top|to allow a price to be determined by the markets as opposed to by rule}}
 * Finnish: {{t+|fi|kellua}}
 * French: {{t+|fr|flotter}}
 {{trans-mid}}
@@ -163,7 +163,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Jèrriais: {{t|roa-jer|fliotter}}
 {{trans-bottom}}
 
-{{trans-top|propose for consideration}}
+{{trans-top|to propose for consideration}}
 * Dutch: {{t|nl|te water laten}}, {{t+|nl|voorstellen}}
 * Finnish: {{t+|fi|ehdottaa}}, {{t+|fi|heittää}}
 {{trans-mid}}
@@ -171,7 +171,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Japanese: {{t|ja|浮かぶ|tr=ukabu}}
 {{trans-bottom}}
 
-{{trans-top|extend a short-term loan to}}
+{{trans-top|to extend a short-term loan to}}
 * German: {{t+|de|borgen}}
 {{trans-mid}}
 {{trans-bottom}}
@@ -236,7 +236,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 * Bashkir: {{t|ba|ҡалҡыуыс|sc=Cyrl}}
 * Bulgarian: {{t|bg|буй|m|sc=Cyrl}}, {{t|bg|поплавък|sc=Cyrl}}
 * Dutch: {{t+|nl|vlot|n}}
-* Finnish: {{t+|fi|koho}}
+* Finnish: {{t+|fi|koho}} {{qualifier|as part of fishing gear}}; {{t|fi|kelluke}}
 * French: {{t+|fr|flotteur|m}}
 * Georgian: {{t-needed|ka}}
 * German: {{t+|de|Floß|n}}, {{t+|de|Schwimmer|m}} {{i|as in a carburetor}}
@@ -288,7 +288,7 @@ From {{etyl|enm|en}} {{m|enm|floten}}, from {{etyl|ang|en}} {{m|ang|flotian||to 
 {{trans-bottom}}
 
 {{trans-top|finance: offering of shares to the public}}
-* Finnish: {{t-check|fi|[[yleinen]] [[osakeanti]]}} {{attention|fi|2=was "{{t+|fi|yleinen}} {{t+|fi|osakeanti}}" - assumed sum-of-parts; if an idiom, remove the wikilinks to the individual words. see [[User:Kephir/gadgets/xte#Translation_fixing]]}}
+* Finnish: {{t|fi|yleinen osakeanti}} 
 {{trans-mid}}
 {{trans-bottom}}
 
