--- a/en/p/pull.8438.wikitext
+++ b/en/p/pull.8438.wikitext
@@ -149,7 +149,7 @@ From {{etyl|enm|en}} {{term|pullen|lang=enm}}, from {{etyl|ang|en}} {{term|pulli
 * Japanese: {{t+|ja|引く|tr=ひく, hiku}}, {{t|ja|引っ張る|tr=ひっぱる, hipparu|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|haler}}
 * Kazakh: {{t+|kk|тарту}}
-* Khmer: {{t-needed|km}}
+* Khmer: {{t+|km|ទាញ|tr=tieɲ|sc=Khmr}}
 * Korean: {{t+|ko|끌다|sc=Hang}}, {{t+|ko|뽑다|sc=Hang}}
 * Kurdish:
 *: Sorani: {{t|ku|ڕاکێشه‌}}
