edit section 3.1 ([[WT:EDIT|Assisted]]) <惠#28980663>

--- a/en/惠/惠.15605.wikitext
+++ b/en/惠/惠.15605.wikitext
@@ -38,7 +38,7 @@
 ==Japanese==
 
 ===Kanji===
-{{ja-kanji|grade=|rs=心08}}
+{{ja-kanji|grade=|rs=心08|style=ky|shin=恵}}
 
 # {{defn|lang=ja|sort=心08}}
 
