--- a/en/b/bridge.7389.wikitext
+++ b/en/b/bridge.7389.wikitext
@@ -61,22 +61,24 @@ The verb is from {{etyl|enm|en}} {{term|briggen|lang=enm}}, from {{etyl|ang|en}}
 
 =====Derived terms=====
 {{rel-top|Terms derived from ''bridge'' (etymology 1)}}
+* [[Bailey bridge]]
 * [[bridge loan]]
 * [[bridge mount]]
 * [[bridge over troubled waters]]
 * [[cross that bridge when one comes to it]]
 * [[bridge the gap]]
 * [[drawbridge]]
+* [[footbridge]]
+* [[Kelvin bridge]]
+{{rel-mid}}
 * [[land bridge]]
 * [[low bridge]]
-{{rel-mid}}
 * [[Maryland bridge]]
-* [[water under the bridge]]
-* [[Wheatstone bridge]]
-* [[Kelvin bridge]]
 * [[Schering bridge]]
 * [[suspension bridge]]
 * [[swing bridge]], [[swingbridge]]
+* [[water under the bridge]]
+* [[Wheatstone bridge]]
 * [[Wien bridge]]
 {{rel-bottom}}
 
