--- a/en/s/stomach.8435.wikitext
+++ b/en/s/stomach.8435.wikitext
@@ -234,6 +234,7 @@ From {{etyl|enm|en}} {{term|stomak|lang=enm}}, from {{etyl|fro|en}} {{term|estom
 * Macedonian: {{t|mk|стомак|m|tr=stómak}}, {{t|mk|мев|m|tr=mev}}
 * Malay: {{t|ms|perut}}
 * Maltese: {{t+|mt|żaqq|f}}
+* Marathi: {{t|mr|पोट|sc=Deva}}
 * Mongolian: {{t-needed|mn}}
 * Navajo: {{t|nv|abid}}
 * Norwegian: {{t+|no|mage|m}}, {{t+|no|buk|m}}
