--- a/en/f/flesh.6883.wikitext
+++ b/en/f/flesh.6883.wikitext
@@ -18,8 +18,9 @@ From {{etyl|enm|en}} {{term|flesh|lang=enm}}, from {{etyl|ang|en}} {{m|ang|flǣs
 #The skin of a human or animal.
 #{{context|by extension|lang=en}} Bare arms, bare legs, bare torso.
 #{{context|archaic|lang=en}} [[animal|Animal]] tissue regarded as food; [[meat]].
-#*{{RQ:Mlry MrtArthr2|XV}}:
-#*:I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne{{nb...}}.
+#*{{RQ:Mlry MrtDrthr|17.2|2|XV|ij}}:
+#*:Thenne syr launcelot sayd / fader what shalle I do / Now sayd the good man / I requyre yow take this hayre that was this holy mans and putte it nexte thy skynne / and it shalle preuaylle the gretely / syr and I wille doo hit sayd sir launcelot / Also I charge you that ye ete no '''flesshe''' as longe as ye be in the quest of the sancgreal / nor ye shalle drynke noo wyne / and that ye here masse dayly and ye may doo hit
+<!--Prior quotr#*:I charge the that thou ete no '''fleysshe''' as longe as ye be in the Queste of Sankgreall, nother ye shall drynke no wyne-->
 #*'''c.1530s''', [[s:William Tyndale|William Tyndale]], ''[[s:Bible (Tyndale)|Tyndale Bible]]'', ''[[s:Bible (Tyndale)/Leviticus|Leviticus]]'', 7, xix-xxi,
 #*:The '''flesh''' that twycheth any vnclene thinge shall not be eaten. but burnt with fire:and all that be clene in their flesh, maye eate '''flesh'''.
 #*:Yf any soule eate of the '''flesh''' of the peaceofferynges, that pertayne vnto the Lorde and hys vnclennesse yet apon him, the same soule shall perisshe from amonge his peoole{{sic}}. &para; Moreouer yf a soule twych any vnclene thinge, whether it be the vnclennesse of man or of any vnclene beest or any abhominacion that is vnclene: ad the eate of the '''flesh''' of the peaceoffrynges whiche pertayne vnto the Lord, that soule shall perissh from his people.
