--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -60,7 +60,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Chamicuro: {{t|ccc|tswali}}
 * Chechen: {{t|ce|къовкъа}}
 * Chinese:
-*: Mandarin: {{t+|cmn|雷|tr=léi|sc=Hani}}, {{t|cmn|雷聲|sc=Hani}}, {{t+|cmn|雷声|tr=léishēng|sc=Hani}}
+*: Mandarin: {{t+|cmn|雷|tr=léi|sc=Hani}}, {{t|cmn|雷聲|sc=Hani}}, {{t+|cmn|雷声|tr=léishēng|sc=Hani}}, {{t+|cmn|雷鳴|sc=Hani}}, {{t+|cmn|雷鸣|tr=léimíng|sc=Hani}}
 * Czech: {{t+|cs|hrom|m}}, {{t|cs|zahřmění|n}}
 * Dalmatian: {{t|dlm|tun|m}}
 * Danish: {{t+|da|torden|c}}
@@ -85,15 +85,15 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 * Interlingue: {{t|ie|tónnere}}
 * Irish: {{t+|ga|toirneach}}
 * Italian: {{t+|it|tuono|m}}
-* Japanese: {{t+|ja|雷|tr=[[かみなり]], kaminari|sc=Jpan}}
+* Japanese: {{t+|ja|雷|tr=[[かみなり]], kaminari|sc=Jpan}}, {{t+|ja|雷鳴|tr=らいめい, raimei|sc=Jpan}}
 * Khmer: {{t+|km|ផ្គរ|tr=pkɔɔ|sc=Khmr}}
 * Korean: {{t|ko|우레|sc=Kore}}, {{t+|ko|천둥|sc=Kore}}
 * Kott: {{t|zko|ajak}}
 * Lao: {{t+|lo|ຟ້າຮ້ອງ|tr=fā hǭng|sc=Laoo}}
 * Latgalian: {{t|ltg|pārkiuņs}}
 * Latin: {{t|la|tonus|m}}, {{t|la|tonitrus|m}}, {{t|la|tonitruum|n}}
-* Latvian: {{t|lv|pērkons|m}}
 {{trans-mid}}
+* Latvian: {{t|lv|pērkons|m}}
 * Lithuanian: {{t|lt|griaustinis}}
 * Macedonian: {{t+|mk|гром|m|tr=grom}}
 * Malay: {{t|ms|guruh}}, {{t|ms|guntur}}
