--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -363,6 +363,7 @@ From {{etyl|fro|en}} {{term|comte|lang=fro}}, {{term|conte|lang=fro}}, from {{et
 [[kk:count]]
 [[ku:count]]
 [[ky:count]]
+[[lv:count]]
 [[li:count]]
 [[hu:count]]
 [[mg:count]]
