[[lv:cost]] <cost#29048503>

--- a/en/c/cost.6840.wikitext
+++ b/en/c/cost.6840.wikitext
@@ -385,6 +385,7 @@ The past tense and past participle is ''cost'' in the sense of "this computer ''
 [[sw:cost]]
 [[ku:cost]]
 [[lo:cost]]
+[[lv:cost]]
 [[lt:cost]]
 [[li:cost]]
 [[hu:cost]]
