--- a/en/c/Czech Republic.2104.wikitext
+++ b/en/c/Czech Republic.2104.wikitext
@@ -69,8 +69,8 @@
 * Pontic Greek: {{t|pnt|Δημοκρατίαν τη Τσεχίας}}
 * Portuguese: {{t+|pt|República Tcheca}}
 * Quechua: {{t|qu|Chiksuyu}}
-* Romanian: {{t+|ro|Republica Cehă|f}}, {{t+|ro|Cehia|f}}
-* Romansch: {{t|rm|Tschechia|f}}
+* Romanian: {{t+|ro|Republica Cehă|f}}
+* Romansch: {{t|rm|Republica Tscheca|f}} 
 * Russian: {{t|ru|Чешская Республика|f|tr=Čéšskaja Respúblika|sc=Cyrl}}, {{t+|ru|Чехия|f|tr=Čéxija|sc=Cyrl}}
 * Scottish Gaelic: an t-{{t|gd|Seic|f}}
 * Serbo-Croatian:
