--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -13,11 +13,11 @@ From {{etyl|la|en}} {{term|Germania|lang=la}}, likely a {{etyl|cel|en}}/{{etyl|c
 ===Proper noun===
 {{en-proper noun|~|Germanies}}
 
-# {{context|geography}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]].
+# {{context|geography}} The [[Central Europe]]an [[state]] [[form]]ed by [[West Germany]]'s 1990 [[absorption]] of [[East Germany]], with its [[capital]] in [[Berlin]].
 #* '''1996''', Paul Bookbinder, ''Weimar '''Germany''': the republic of the reasonable'' (ISBN 0719042879), page 90
 #*: Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.
-# {{context|geography|historical}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s.
-# {{context|geography|historical}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s.
+# {{context|geography|historical}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
+# {{context|geography|historical}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s.
 # {{context|geography}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
 # {{context|countable|geography|historical}} [[West Germany|West]] or [[East Germany]] or [[any]] [[other]] [[German]] [[state]] (''see usage note''); {{context|in the plural|lang=en}} [[both|Both]], [[several]], or [[all]] of [[these]] [[state]]s, [[take]]n [[together]].
 #*'''1872''', ''History of English Literature'', an abridgment by John Fiske of H. van Laun's translation of Hippolyte Taine's '''1864''' ''Histoire de la littérature anglaise''; page 26:
