--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -18,7 +18,7 @@ From {{etyl|la|en}} {{term|Germania|lang=la}}, likely a {{etyl|cel|en}}/{{etyl|c
 #*: Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.
 # {{context|geography|historical}} The [[Central Europe]]an [[state]] [[form]]ed by [[Prussia]] in 1871 or its [[successor]] [[state]]s, with their [[capital]]s in [[Berlin]].
 # {{context|geography|historical}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s.
-# {{context|geography}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
+# {{context|geography|chiefly|_|historical}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
 # {{context|countable|geography|historical}} [[West Germany|West]] or [[East Germany]] or [[any]] [[other]] [[German]] [[state]] (''see usage note''); {{context|in the plural|lang=en}} [[both|Both]], [[several]], or [[all]] of [[these]] [[state]]s, [[take]]n [[together]].
 #*'''1872''', ''History of English Literature'', an abridgment by John Fiske of H. van Laun's translation of Hippolyte Taine's '''1864''' ''Histoire de la littérature anglaise''; page 26:
 #*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of '''Germany'''.
@@ -27,6 +27,9 @@ From {{etyl|la|en}} {{term|Germania|lang=la}}, likely a {{etyl|cel|en}}/{{etyl|c
 #*: The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.
 #* '''2010''', Ilan Stavans, ''Gabriel García Márquez: The Early Years'' (ISBN 0312240333):
 #*: They were also accompanied by Luis Villar Bordo, whom García Márquez had met during his student years at the Universidad Nacional de Bogotá. In a Renault 14, they drove from one '''Germany''' to the other, {{...}}
+
+====Usage note====
+In its present use, "Germany" and related terms such as "[[German]]" usually refer to the present [[Federal Republic of Germany]] and its citizens to the exclusion of German-speaking peoples of other areas such as [[Austria]]. In its historic and historical use, the extent of "Germany" was a fraught issue, known in the 19th century as "[[w:The German Question|The German Question]]", which might include or exclude areas depending on the speaker and context. The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]") initially used as a derogatory exonym before being adopted as a title of the Holy Roman Emperors in the early Modern period. The more common title adopted by the medieval rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
 
 ====Synonyms====
 * {{sense|present state}} [[Federal Republic of Germany]] ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
