--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|mul=names of Germany}}
 
 ===Etymology===
-From {{etyl|la|en}} {{term|Germania|Germānia|lang=la}}, likely a {{etyl|cel|en}}/{{etyl|cel-gau|en}} term for the peoples west of the Rhine that meant “neighbor”.<ref>{{reference-book |last=Schulze |first=Hagen |title=Germany: A New History |origyear=1998 |publisher=Harvard University Press |location=Cambridge, MA | pages=4}}</ref><ref>[http://www.oxfordreference.com/views/ENTRY.html?subview=Main&entry=t27.e6407 "German"], ''The Concise Oxford Dictionary of English Etymology''. Ed. T. F. Hoad. Oxford: Oxford University Press, 1996. Oxford Reference Online. Oxford University Press. Accessed March 4, 2008.</ref>
+From {{etyl|la|en}} {{term|Germania|Germānia|lang=la}} ("land of the Germans"), from {{term|Germani|Germānī|lang=la}}, a people living around and east of the [[Rhine]] first attested in the {{nowrap|1st century {{smallcaps|b.c.}}}} works of [[w:Julius Caesar|Julius Caesar]] and of uncertain etymology. The [[exonym]] was said by [[w:Strabo|Strabo]] to derive from {{term|germanus|lang=la}} ("[[close]] [[kin]]; [[genuine]]"), making it cognate with "[[germane]]" and "[[german]]", but this seems unsupported. Attempts to derive it from Germanic or Celtic roots are all problematic.<ref name=oed>''Oxford English Dictionary'', {{nowrap|3rd ed.}} "German, ''adj.'' and ''n''". Oxford University Press (Oxford), 2012.</ref>
 
 ===Pronunciation===
 * {{a|UK}} {{IPA|/ˈd͡ʒɜː.mə.nɪ/|lang=en}}
