/* Proper noun */ Gibbon quote on ancient "Germany" <Germany#29081981>

--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -21,18 +21,20 @@ From {{etyl|enm|en}} {{term|Germanie|lang=enm}} &c., from {{etyl|ang|en}} {{term
 #*: Severing's belief that trade union workers were the most progressive and democratic element in '''Germany''' holds up well under investigation.
 # {{context|geography|historical|lang=en}} A [[nominal]] [[medieval]] [[kingdom]] [[form]]ing a [[region]] of the [[Carolingian]] and [[Holy Roman Empire|Holy Roman]] [[empire]]s, with [[various]] [[capital]]s.
 # {{context|geography|chiefly|_|historical|lang=en}} The [[nation]] of the [[German]] [[people]], [[regardless]] of their [[political]] [[unification]] (''see usage note'').
+#* '''1776''', Edward Gibbon, ''The History of the Decline and Fall of the Roman Empire'', [http://books.google.com/books?id=aLcWAAAAQAAJ&pg=PA218 Vol. I, page 218]: 
+#*: Ancient '''Germany''', excluding from its independent limits the province [[westward|weſtward]] of the Rhine, which had [[submit|ſubmitted]] to the Roman yoke, extended [[itself|itſelf]] over a third part of Europe. [[almost|Almoſt]] the whole of modern '''Germany''', Denmark, Norway, Sweden, Finland, [[Livonia]], [[Prussia|Pruſſia]], and the greater part of Poland, were peopled by the various tribes of one great nation, [[whose|whoſe]] complexion, manners, and language, denoted a common origin and [[preserve|preſerved]] a [[striking|ſtriking]] [[resemblance|reſemblance]].
 # {{context|countable|geography|historical|lang=en}} [[West Germany|West]] or [[East Germany]] or [[any]] [[other]] [[German]] [[state]] (''see usage note''); {{context|in the plural|lang=en}} [[both]], [[several]], or [[all]] of [[these]] [[state]]s, [[take]]n [[together]].
 #*'''1872''', ''History of English Literature'', John Fiske's abridgment of H. van Laun's translation of Hippolyte Taine's ''Histoire de la littérature anglaise'' (1864), page 26:
-#*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain a '''Germany''' outside of '''Germany'''.
+#*: While the Germans of Gaul, Italy, and Spain became Romans, the Saxons retained their language, their genius, and manners, and created in Britain '''a Germany''' outside of Germany.
 #* '''2007''', William Clark, ''Academic Charisma and the Origins of the Research University'', ISBN 0226109224, page 84:
 #*: The differences between England and the '''Germanies''' sprang from the absence or presence of ministerial interventions.
-#*'''2010''', Klaus Wiegrefe, "[http://www.spiegel.de/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html Germany's Unlikely Diplomatic Triumph]" in ''Spiegel Online'':
-#*: It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West Germany in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change. 
 #* '''2010''', Ilan Stavans, ''Gabriel García Márquez: The Early Years'', ISBN 0312240333:
-#*: They were also accompanied by Luis Villar Bordo, whom García Márquez had met during his student years at the Universidad Nacional de Bogotá. In a Renault 14, they drove from one '''Germany''' to the other, {{...}}
+#*: In a Renault 14, they drove from one '''Germany''' to the other...
+#*'''2010 Sept. 29''', Klaus Wiegrefe, "[http://www.spiegel.de/international/germany/germany-s-unlikely-diplomatic-triumph-an-inside-look-at-the-reunification-negotiations-a-719848-druck.html Germany's Unlikely Diplomatic Triumph]" in ''Spiegel Online'':
+#*: It is the fall of 1989, and two time zones farther to the west, thousands of people march through downtown Leipzig every Monday, while more than 6,000 East German citizens are camped out in the embassies of West Germany in Prague and Warsaw, hoping to be allowed to emigrate. The images have circled the globe, and it is clear to leaders Thatcher and Gorbachev that the two '''Germanys''' are on the verge of radical change. 
 
 ====Usage note====
-In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> In its historic and historical use, the extent of "Germany" was a fraught issue, known in the 19th century as "[[w:The German Question|The German Question]]". The political area considered "Germany" might include or exclude areas such as [[Austria]] or (less often) [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], &c.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la|-}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
+In its present use, "Germany" almost always refers to the [[Federal Republic of Germany]].<ref name=oed/> In its historic and historical use, the extent of "Germany" was a fraught issue, known in the 19th century as "[[w:The German Question|The German Question]]". The political area considered "Germany" might include or exclude areas such as [[Prussia]], [[Austria]], or [[Switzerland]] depending on the speaker and context. The area more often described an ethnic region than a polity into the 16th century. In Old English, it was even occasionally used to refer to areas of [[England]] held by the [[Saxons]], [[Angles]], &c.<ref name=oed/> The medieval "Kingdom of Germany" is an English anachronism translating the {{etyl|la|-}} {{term|rex|lang=la}} {{term|Teutonicorum|lang=la}} ("king of the [[Teutons]]"), which was initially used as a derogatory exonym before being adopted as a formal title of the Holy Roman Emperors in the early Modern period. The title adopted by the medieval Central European rulers themselves was {{term|rex|lang=la}} {{term|Romanorum|lang=la}} ("king of the [[Romans]]").
 
 ====Synonyms====
 * {{sense|present state}} [[Federal Republic of Germany]] ([[FRG]], [[BRD]]), [[German]] [[republic|Republic]]
