--- a/en/g/Germany.2103.wikitext
+++ b/en/g/Germany.2103.wikitext
@@ -49,7 +49,7 @@ In its present use, "Germany" almost always refers to the [[Federal Republic of 
 * {{sense|1919&ndash;1933}} [[Weimar Republic]], [[Weimar]] Germany
 * {{sense|1871&ndash;1918}} [[German Empire]], [[German]] [[Reich]], [[Second Reich]]
 * {{sense|early 19th century, partial}} [[North German Confederation]], [[German Confederation]], [[Confederation of the Rhine]]
-* {{sense|earlier}} [[Holy Roman Empire]], [[First Reich]], [[East Francia]], [[Austrasia]]
+* {{sense|earlier}} [[Holy Roman Empire]], [[First Reich]], [[East Francia]], [[Austrasia]], [[Germania]]
 * {{sense|obsolete}} [[Dutchland]], [[Germanland]]
 
 ====Derived terms====
