--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -288,7 +288,7 @@ From {{etyl|fro|en}} {{term|comte|lang=fro}} and {{term|conte|lang=fro}} ("count
 * {{sense|related titles}} [[baron]], [[don]], [[duke]], [[earl]], [[lord]], [[prince]]
 
 =====Translations=====
-{{trans-top|the male ruler of a county}}
+{{trans-top|ruler of a county (m)}}
 * Arabic: {{t|ar|كونت|m|tr=kuunt|sc=Arab}}
 * Armenian: {{t|hy|կոմս|tr=koms}}
 * Asturian: {{t|ast|conde|m}}
