--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -277,6 +277,8 @@ From {{etyl|fro|en}} {{term|comte|lang=fro}} and {{term|conte|lang=fro}} ("count
 =====Synonyms=====
 * {{sense|English}} [[earl]]
 * {{sense|French}} [[comte]]
+* {{sense|Italian}} [[conte]]
+* {{sense|German}} [[Graf]]
 
 =====Derived terms=====
 * [[viscount]]
