--- a/en/c/count.8441.wikitext
+++ b/en/c/count.8441.wikitext
@@ -275,10 +275,10 @@ From {{etyl|fro|en}} {{term|comte|lang=fro}} and {{term|conte|lang=fro}} ("count
 # A [[nobleman]] [[hold]]ing a [[rank]] [[intermediate]] between [[duke]]s and [[baron]]s.
 
 =====Synonyms=====
-* {{sense|English}} [[earl]]
-* {{sense|French}} [[comte]]
-* {{sense|Italian}} [[conte]]
-* {{sense|German}} [[Graf]]
+* {{sense|English counts}} [[earl]]
+* {{sense|French counts}} [[comte]]<!--not repeat of translations but foreign ranks frequently left untranslated in English-->
+* {{sense|Italian counts}} [[conte]]
+* {{sense|German counts}} [[graf]]<!--English capitalization-->
 
 =====Derived terms=====
 * [[viscount]]
