--- a/en/t/thunder.7222.wikitext
+++ b/en/t/thunder.7222.wikitext
@@ -16,7 +16,7 @@ From {{etyl|ang|en}} {{term|þunor|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-
 
 # The [[sound]] caused by the discharge of atmospheric electrical charge.
 #: '''''Thunder''' ''is preceded by [[lightning]].''
-# A sound resembling thunder.
+# A sound resembling thunder; especially, one produced by a [[jet]] [[airplane]] in flight.
 # A deep, [[rumble|rumbling]] noise.
 #: ''Off in the distance, he heard the '''thunder''' of hoofbeats, signalling a stampede.''
 # An alarming or startling [[threat]] or [[denunciation]].
