converted "Cantonese" and "Mandarin" sections into unified "Chinese" section <时#29089586>

--- a/en/时/时.16926.wikitext
+++ b/en/时/时.16926.wikitext
@@ -14,19 +14,23 @@
 
 ----
 
-==Cantonese==
+==Chinese==
+{{zh-hanzi-box|时|[[時]]}}
 
-===Hanzi===
-{{yue-hanzi|jyut=si4|y=si4|tra=時}}
+===Pronunciation===
+{{zh-pron
+|m=shí
+|c=si4
+|mc=y
+|oc=y
+|ma=
+|cat=n,adv
+}}
 
-# {{defn|lang=yue|sort=日03}}
+===Adverb===
+{{zh-adv|s}}
 
-----
-
-==Mandarin==
-
-===Hanzi===
-{{cmn-hanzi|tra=時|pin=[[shí]] ([[shi2]])|wg=shih<sup>2</sup>}}
+# [[when]]
 
 ====Compounds====
 * [[时弊]]
@@ -97,11 +101,6 @@
 * [[时钟座]]
 * [[时装]]
 * [[时装表演]]
-
-===Adverb===
-{{cmn-adv|s|pin=shí|pint=shi2|tra=時}}
-
-# [[when]]
 
 [[da:时]]
 [[fr:时]]
