/* Kanji */  http://www.csse.monash.edu.au/~jwb/cgi-bin/wwwjdic.cgi?1MMJ%E6%98%87# <昇#29096292>

--- a/en/昇/昇.16943.wikitext
+++ b/en/昇/昇.16943.wikitext
@@ -27,7 +27,7 @@
 ===Kanji===
 {{ja-kanji|grade=c|rs=日04}}
 
-# {{defn|lang=ja|sort=日04}}
+# '''rise up'''
 
 ====Readings====
 * {{ja-readings|on=[[しょう]] (shō)|kun=[[のぼる]] (noboru)}}
